# HypergraphRewritingEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CROSS_COMPILATION.md  IR_VERIFICATION_NOTES.md  LICENSE.md  README.md  TASKS.md  WolframHausdorffDimension.wl  build_all_platforms.sh  build_docs.sh  build_paclet.sh  build_windows_gpu.sh
benchmarking/: CMakeLists.txt  README.md  benchmark_framework.hpp  benchmark_main.cpp  plot_benchmarks.py  random_hypergraph_generator.hpp  requirements.txt
benchmarks/: CMakeLists.txt  canonicalization_benchmarks.cpp  event_relationship_benchmarks.cpp  evolution_benchmarks.cpp  job_system_benchmarks.cpp  pattern_matching_benchmarks.cpp  performance_benchmark.cpp  state_management_benchmarks.cpp  uniqueness_tree_benchmarks.cpp  v1_v2_3_comparison_benchmarks.cpp  wolfram_integration_benchmark.cpp  wxf_benchmarks.cpp
examples/: CMakeLists.txt  basic_evolution.cpp  hypergraph_basics.cpp  job_system_usage.cpp  multiway_graph_usage.cpp  pattern_matching.cpp  rewriting_engine.cpp
gpu/: ARCHITECTURE.md  CMakeLists.txt  benchmark_gpu.cu  causal.cu  causal.cuh  evolution.cu  evolution.cuh  gpu_evolution_host.cu  gpu_evolution_host.hpp  hash_table.cuh  memory_pool.cuh  pattern_match.cu  pattern_match.cuh  rewrite.cu  rewrite.cuh  signature_index.cu  signature_index.cuh  types.cuh  wl_hash.cu  wl_hash.cuh  work_queue.cuh
gpu/include/hg_gpu/: atomic_pool.hpp  atomics.hpp  edge_signature.hpp  engine_state.hpp  errors.hpp  evolve.hpp  hash_table.hpp  initial_upload.hpp  ir_canon.hpp  lock_free_list.hpp  match.hpp  overflow.hpp  partial_match.hpp  rewrite.hpp  ring_buffer.hpp  segmented_pool.hpp  signature_index.hpp  termination.hpp  tuning_cache.hpp  types.hpp  vertex_inverted_index.hpp  warp_ops.hpp  wl_hash.hpp  work_queue.hpp
gpu/src/: evolve.cu  initial_upload.cu  ir_canon.cu  ir_host_fallback.cpp  match.cu  rewrite.cu  wl_hash.cu
gpu/tests/: bench_cpu_vs_gpu.cpp  cuda_warmup.cu  test_atomic_pool.cu  test_edge_signature.cu  test_engine_state.cu  test_exploration_probability.cu  test_gpu_basic.cu  test_gpu_components.cu  test_gpu_cpu.cpp  test_gpu_cpu_unified.cpp  test_gpu_evolution.cu  test_gpu_pattern_match.cu  test_gpu_rewrite.cu  test_gpu_vs_cpu_differential.cpp  test_gpu_wl_hash.cu  test_hash_table.cu  test_indices.cu  test_ir_canon.cu  test_lock_free_list.cu  test_match.cu  test_partial_match.cu  test_rewrite.cu  test_ring_buffer.cu  test_smoke.cu  test_termination.cu  test_warp_ops.cu  test_wl_hash.cu
hypergraph/: CMakeLists.txt
hypergraph/include/hypergraph/: arena.hpp  atomic_compat.hpp  bitset.hpp  canonical_types.hpp  canonicalization.hpp  causal_graph.hpp  concurrent_hash_map.hpp  concurrent_id_set.hpp  concurrent_map.hpp  debug_log.hpp  edge_signature.hpp  (+32 more)
hypergraph/src/: canonicalization.cpp  causal_graph.cpp  hypergraph.cpp  ir_canonicalization.cpp  parallel_evolution.cpp  pattern_matching.cpp  pattern_matching_tasks.cpp  rewriter.cpp  rewriting.cpp  thread_local_pool.cpp  uniqueness_tree.cpp  wolfram_evolution.cpp  wolfram_states.cpp
hypergraph/tests/: test_blackhole_idempotent.cpp  test_causal_branchial.cpp  test_causal_determinism.cpp  test_causal_tr_exactness.cpp  test_concurrent_map.cpp  test_determinism_fuzzing.cpp  test_event_canonicalization.cpp  test_evolution_limits.cpp  test_feature_matrix.cpp  test_grid_performance.cpp  test_incremental_wl.cpp  test_ir_canonicalization.cpp  test_match_forwarding_debug.cpp  test_multiple_initial_states.cpp  test_oracle_corpus.cpp  test_parallel_evolution.cpp  test_pattern_matching.cpp  test_quotient_completeness.cpp  test_reference_oracle.cpp  test_repeated_invocation.cpp  test_sampling_reproducibility.cpp  test_unified_causal_branchial.cpp  test_unified_determinism_fuzzing.cpp  test_unified_event_canonicalization.cpp  test_unified_evolution_limits.cpp  test_unified_multiple_initial_states.cpp  test_unified_parallel_evolution.cpp  test_unified_pattern_matching.cpp  test_unified_v1_comparison.cpp  test_unified_v1_count_comparison.cpp  test_ut_vs_utinc_performance.cpp  test_v1_unified_comprehensive.cpp  test_v1_unified_exact_comparison.cpp
job_system/: CMakeLists.txt
job_system/benchmark/: callgrind_benchmark.cpp  debug_benchmark.cpp  debug_multithread.cpp  debug_test.cpp  fast_test.cpp  final_scaling.cpp  job_system_benchmark.cpp  minimal_benchmark.cpp  minimal_test.cpp  overhead_analysis.cpp  profile_benchmark.cpp  quick_profile.cpp  scaling_benchmark.cpp  simple_profile.cpp  simple_working_test.cpp  test_multithread.cpp
job_system/examples/: basic_usage.cpp
job_system/tests/: CMakeLists.txt  test_job_system.cpp  test_work_stealing_deque.cpp
lockfree_deque/: CMakeLists.txt
lockfree_deque/tests/: CMakeLists.txt  test_deque.cpp
paclet/: CMakeLists.txt  INSTALL.md  PacletInfo.wl  README.md
paclet/Documentation/: HypergraphRewritingExamples.nb
paclet/Kernel/: HypergraphRewriting.wl
paclet/LibraryResources/: CMakeLists.txt  HypergraphRewriting.def  hypergraph_ffi.cpp  hypergraph_ffi_simple.cpp  hypergraph_ffi_wxf.cpp  test_simple.cpp  wxf.cpp  wxf.hpp
tests/: CMakeLists.txt  test_brute_force_isomorphism.cpp  test_canonicalization.cpp  test_core_hypergraph.cpp  test_debug_edge_selection.cpp  test_debug_relationships.cpp  test_determinism_fuzzing.cpp  test_edge_signature.cpp  test_evolution_limits.cpp  test_helpers.hpp  test_isolated_duplicate_bug.cpp  test_lockfree_integration.cpp  test_multiple_initial_states.cpp  test_paclet.cpp  test_parallel_tasks.cpp  test_pattern_matching_comprehensive.cpp  test_pattern_matching_isolation.cpp  test_rewriting_engine.cpp  test_simple.cpp  test_unified_simple.cpp  test_uniqueness_tree.cpp  test_uniqueness_tree_fuzzing.cpp  test_wolfram_evolution.cpp  test_wolfram_states.cpp  test_wxf_complete.cpp  test_wxf_comprehensive.cpp
visualisation/: CMakeLists.txt
visualisation/app/: blackhole_viz.cpp  evolution_visualisation.cpp  hypergraph_test.cpp  native_main.cpp
visualisation/tests/: test_quantum_analysis.cpp
visualisation/tools/: analyze_bhdata.cpp
wxf/: CMakeLists.txt  wxf.cpp  wxf.hpp
wxf/tests/: test_wxf.cpp
(+248 files in other folders)
